# unfinished-projects

./: .gitignore  README.md
1. Vulkan/: Vulkan.sln
1. Vulkan/01. Opening a Window/: 01. Opening a Window.csproj
1. Vulkan/02. Shaders/: Program.cs
2. ML.NET/: MachineLearning.sln  README.md
2. ML.NET/Hello ML.NET/: Program.cs
3. unicode-keyboard/: README.md  unicode-keyboard.sln  unicode-keyboard.vcxproj  unicode-keyboard.vcxproj.filters
3. unicode-keyboard/src/: input_window.c  input_window.h  main.c
4. unnamed-wiki-project/: .gitignore  CMakeLists.txt  LICENSE  README.md
4. unnamed-wiki-project/cmake/: asio.cmake  fltk.cmake
